--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     
       </section>
       <section class="links">
-        <h2 class="links__header">О себе:</h2>
+        <h2 class="links__header">О000 сеeeбеeee:</h2>
         <ul class="links__container">
           <li class="links__link">
-            <p class="links__title">5 лет опыта работы инженером по тестированию программного обеспечения в гибкой среде разработки приложений Android / iOS в сфере здравоохранения. Отвечал за стратегии тестирования и автоматизации тестирования (Visual Studio Coded, Quick Test Pro и т. Д), что привело к ежегодной экономии $20 000 и сокращению времени выполнения заказа на 45%</p>
+            <p class="links__title">115 лет опыта работы инженером по тестированию программного обеспечения в гибкой среде разработки приложений Android / iOS в сфере здравоохранения. Отвечал за стратегии тестирования и автоматизации тестирования (Visual Studio Coded, Quick Test Pro и т. Д), что привело к ежегодной экономии $20 000 и сокращению времени выполнения заказа на 45%</p>
             <a class="linsk__link" href=/</a>
           </li>
       
